Fixed z-index

--- a/src/components/GameBoard/GameBoard.css
+++ b/src/components/GameBoard/GameBoard.css
@@ -14,6 +14,7 @@
 
 .flag-button {
     left: 50%;
+    z-index: 2;
     /* transform: translateX(-50%); */
 }
 
